# gadgetd

./: .gitignore  CMakeLists.txt  LICENSE  NOTICE  cmake_uninstall.cmake.in  groups  project.config
doxygen/: Doxyfile.in
examples/: CMakeLists.txt  ffs-host-example.c  ffs-service-example.c  ffs.sample
include/: common.h  ffs-daemon.h  ffs-service.h  gadget-config-manager.h  gadget-daemon.h  gadget-descriptors.h  gadget-function-manager.h  gadget-manager.h  gadget-strings.h  gadgetd-common.h  gadgetd-config-object.h  gadgetd-config.h  gadgetd-core-func.h  gadgetd-core.h  gadgetd-create.h  gadgetd-ffs-func.h  gadgetd-function-object.h  gadgetd-functions.h  gadgetd-gadget-object.h  gadgetd-introspection.h  gadgetd-remove.h  gadgetd-udc-iface.h  gadgetd-udc-object.h  strdelim.h
include/dbus-config-ifaces/: gadget-config.h
include/dbus-function-ifaces/: gadgetd-function-iface.h  gadgetd-serial-function-iface.h
include/gadgetd/: ffs-daemon.h
packaging/: gadgetd.spec
src/: ffs-service.c  gadget-config-manager.c  gadget-daemon.c  gadget-descriptors.c  gadget-function-manager.c  gadget-manager.c  gadget-strings.c  gadgetd-common.c  gadgetd-config-object.c  gadgetd-config.c  gadgetd-core.c  gadgetd-create.c  gadgetd-ffs-func.c  gadgetd-function-object.c  gadgetd-functions.c  gadgetd-gadget-object.c  gadgetd-introspection.c  gadgetd-remove.c  gadgetd-udc-iface.c  gadgetd-udc-object.c  gadgetd.c  gadgetd.config  strdelim.c
src/dbus-config-ifaces/: gadget-config.c
src/dbus-function-ifaces/: gadgetd-function-iface.c  gadgetd-serial-function-iface.c
src/libffs-daemon/: ffs-daemon.c
xml/: create.sh  gadgetd.xml  org.usb.gadgetd.conf
